# SemestralnaPracaPOS

./: CMakeLists.txt  Data.cpp  Data.h  Dokumentácia POS.docx  Hash.cpp  Hash.h  Konstanty.h  Konverzacia.cpp  Konverzacia.h  Moznosti.cpp  Moznosti.h  Nacitavac.cpp  Nacitavac.h  Pomocna.cpp  Pomocna.h  Pouzivatel.cpp  Pouzivatel.h  Prihlasenie.cpp  Prihlasenie.h  Sprava.cpp  Sprava.h  SpravaKonverzacii.cpp  SpravaKonverzacii.h  SpravaPriatelstiev.cpp  SpravaPriatelstiev.h  Zapisovac.cpp  Zapisovac.h  client.cpp  main.cpp  server.cpp
